--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 default.sender=felipecavalcanti033@gmail.com
 default.recipient=felipecavalcanti033@gmail.com
+
