--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.profiles.active=test
 default.sender=felipecavalcanti033@gmail.com
 default.recipient=felipecavalcanti033@gmail.com
 
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
+
